<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.ProductDetailAcivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/back"
                android:src="@drawable/baseline_arrow_back_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.02"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:fontFamily="@font/inter_extrabold"
                android:textSize="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/back"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/menucart"
                android:src="@drawable/menucart"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.02"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


            <TextView
                android:id="@+id/product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/prodectname"
                android:fontFamily="@font/inter_extrabold"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linearlayout1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias=".01"
                >
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_height="30dp"
                    android:src="@drawable/rating"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textSize="20sp"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/rating"
                    />

            </LinearLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivItem"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:padding="10dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toBottomOf="@id/linearlayout1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:id="@+id/linearlayout2"
                android:orientation="vertical"
                app:layout_constraintHorizontal_bias=".01"
                app:layout_constraintTop_toBottomOf="@id/ivItem"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >
            <TextView
                android:id="@+id/product_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customizeyouroder"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/inter_extrabold"
                android:textSize="22sp"
               />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:gravity="center_vertical">

                    <!-- Mild label -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mild"
                        android:textSize="16sp"
                        android:textColor="#00FF00"
                        android:layout_marginEnd="8dp" />

                    <!-- SeekBar -->
                    <SeekBar
                        android:id="@+id/seekBarSpicy"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:progress="50"
                        android:thumbTint="@android:color/holo_red_light"
                        android:progressTint="@android:color/holo_red_dark" />

                    <!-- Hot label -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hot"
                        android:textSize="16sp"
                        android:textColor="#FF0000"
                        android:layout_marginStart="8dp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linearlayout"
                android:layout_marginTop="2dp"
                app:layout_constraintTop_toBottomOf="@id/linearlayout2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textSize="24sp"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/inter_extrabold"
                    />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            </LinearLayout>

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/about"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/inter_extrabold"
                app:layout_constraintTop_toBottomOf="@id/linearlayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/abouttext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/chewy"
                android:text="Hii"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/about" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addtocart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_to_cart"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_bg"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/abouttext" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
